# cot-rosetta-interp

./: .cloud-config.json  .cloud-credentials.noreply@anthropic.com.enc  .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  TASKS.md  __init__.py  download  puzzles.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: cloud-auth.sh
data/: README.md
experiments/04_hypothesis_search/: DESIGN.md  PROJECT.md  PROJECT_2.md
experiments/04_hypothesis_search/clingo_gilbertese/: README.md  solve_gilbertese_clingo.ipynb
scripts/: cloud_runner.py  scrape_uklo_pdfs.py  upload_puzzles.py
src/rosetta_interp/: puzzles.py
tests/: test_puzzles.py
tests/fixtures/uklo_raw/: 2013.3-Pali.txt  2023_R1_3-Gilbertese.txt  2024_R2_2-Taa.txt
