[project]
name = "cot-rosetta-interp"
version = "0.0.1"
description = "Investigating reasoning LLMs on UKLO Rosetta Stone linguistic puzzles"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ef2020" }]

# Phase 1 deps only. Phase 3 (transformers, torch, vllm, sae libs) added when we get there
# to keep the local install light and the dependency tree predictable.
dependencies = [
    # LLM clients
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=0.3.0",
    # Data + schema
    "pydantic>=2.8.0",
    "polars>=1.0.0",          # results dataframes; switch to pandas if preferred
    "pyarrow>=17.0.0",        # parquet for results
    "tenacity>=9.0.0",        # retries for flaky APIs
    # Config + env
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    # Cloud
    "google-cloud-storage>=2.18.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",           # pretty console output during runs
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "pyright>=1.1.380",
    "ipykernel>=6.29.0",      # notebooks
    "jupyter>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rosetta_interp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = ["E501"]   # line length handled by formatter

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
